yamls/k8s-webhook/pipeline-resource/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline-webhook-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipeline-webhook
  template:
    metadata:
      labels:
        app: pipeline-webhook
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
      # image: octahub.8lab.cn:5000/99/pipeline-webhook:v20231219
      - image: octahub.8lab.cn:5000/99/pipeline-webhook:v20231226
        imagePullPolicy: Always
        name: webhook
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
         - mountPath: /certs
           name: webhook-secret
           readOnly: true
         - name: cgroup
           mountPath: /host/sys/fs/cgroup
      tolerations:
      - effect: NoSchedule
        operator: Exists
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/disk-pressure
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/memory-pressure
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/pid-pressure
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/unschedulable
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/network-unavailable
        operator: Exists
      volumes:
      - name: webhook-secret
        secret: 
          secretName: pipeline-webhook-secret
      - name: cgroup
        hostPath:
          path: /sys/fs/cgroup
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kaniko
                operator: In
                values:
                - kaniko
      securityContext:
        runAsUser: 0
        fsGroup: 0
