yamls/k8s-webhook/pipeline-resource/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-webhook-svc
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: pipeline-webhook
