yamls/k8s-webhook/pipeline-resource/mutating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration 
metadata:
  name: pipeline-pod-mutating-webhook-config 
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR0RENDQXB5Z0F3SUJBZ0lVSVhaa0ZUR3J1STVJSkJua1RjOW9tTWxGT3hjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1lERVZNQk1HQTFVRUJ4TU1kR2hsSUdsdWRHVnlibVYwTVJZd0ZBWURWUVFLRXcxaGRYUnZaMlZ1WlhKaApkR1ZrTVJVd0V3WURWUVFMRXd3NGJHRmlJR05zZFhOMFpYSXhHREFXQmdOVkJBTVREemhzWVdJZ1lYVjBiMmRsCmJpQkRRVEFlRncweU16QXpNamt4TXpJME1EQmFGdzB5T0RBek1qY3hNekkwTURCYU1HQXhGVEFUQmdOVkJBY1QKREhSb1pTQnBiblJsY201bGRERVdNQlFHQTFVRUNoTU5ZWFYwYjJkbGJtVnlZWFJsWkRFVk1CTUdBMVVFQ3hNTQpPR3hoWWlCamJIVn [...]
    service:
      name: pipeline-webhook-svc
      namespace: default
      path: /mutating-pipeline-pod
      port: 8080
  failurePolicy: 'Ignore'
  name: pipeline.pod.resource  
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
  # - pods
    - pods/status
  sideEffects: None
